// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedCard glow="emergency" adds emergency shadow 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "rgba(255,59,48,0.3)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 8,
        "padding": 16,
        "shadowColor": "rgba(220,38,38,0.40)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 20,
      },
      undefined,
    ]
  }
>
  <Text>
    Alert
  </Text>
</View>
`;

exports[`ThemedCard glow="primary" adds primary shadow 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "rgba(130,26,82,0.3)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 8,
        "padding": 16,
        "shadowColor": "rgba(130,26,82,0.30)",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 20,
      },
      undefined,
    ]
  }
>
  <Text>
    Glow
  </Text>
</View>
`;

exports[`ThemedCard renders children (default card) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "rgba(0,0,0,0.07)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 2,
        "padding": 16,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 14,
      },
      undefined,
    ]
  }
>
  <Text>
    Hello
  </Text>
</View>
`;

exports[`ThemedCard strong prop uses stronger background 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "rgba(0,0,0,0.12)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 2,
        "padding": 16,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 14,
      },
      undefined,
    ]
  }
>
  <Text>
    Strong
  </Text>
</View>
`;
